move to a version compatible with java 25